django-sitemessage changelog
============================

Unreleased
----------
+ Implemented Telegram messenger.
+ Added `allow_user_subscription` attr to base message and messenger classes.
+ Added schedule_tweet() shortcut.
+ Added schedule_telegram_message() shortcut.
* Fixed `get_user_preferences_for_ui()` producing buggy result.


v0.6.0
------
+ Adapted for Django 1.8.
* Russian locale is updated.


v0.5.1
------
* Message.schedule() now respects message type priority attribute.
* `SITEMESSAGE_EMAIL_BACKEND_MESSAGES_PRIORITY` now defaults to None.


v0.5.0
------
* IMPORTANT: Package layout changed (messages, messengers locations changed).
* IMPORTANT: Changed default templates search path.
+ Implemented subscriptions handling.
+ Implemented Django email backend.
+ Implemented experimental `mark read` functionality for e-mails.
+ Implemented `List-Unsubscribe` e-mail header support for SMTP messenger.
+ Added Django 1.7+ migrations.
+ Added basic messages templates.
+ Added `INIT_BUILTIN_MESSAGE_TYPES` setting.
+ Added `EMAIL_BACKEND_MESSAGES_PRIORITY` setting.
+ Added `DEFAULT_SHORTCUT_EMAIL_MESSAGES_TYPE` setting.
+ Added `SITE_URL` setting.
* Fixed delivery errors logging.
* Dispatch model is now always passed into `compile()`.
* Exception handling scope broadened for Twitter.


v0.4.1
------
* Fixed `sitemessage_send_scheduled` command failure on Django 1.7.
* Now `time_dispatched` field value is timezone-aware.


v0.4.0
------
+ Django 1.7 ready.
+ Added Russian loco.
+ Implemented get_message_type_for_app() and override_message_type_for_app().


v0.3.0
------
+ Added Twitter messenger.
* Messengers are moved into a separate module.


v0.2.0
------
+ Added message priorities support.
+ Added support for sending test messages.
+ Now dispatches creation updates `dispatches_ready` message property.
+ Now message templates may use data from 'message_model' and 'dispatch_model' variables.
+ Now message is cached for dispatches with errors.


v0.1.0
------