@@ -7,6 +7,7 @@ Unreleased
 + Added `allow_user_subscription` attr to base message and messenger classes.
 + Added schedule_tweet() shortcut.
 + Added schedule_telegram_message() shortcut.
++ Added Messenger.before_after_send_handling() context manager.
 * Fixed `get_user_preferences_for_ui()` producing buggy result.
 
 
